# talking-in-codes

./: .cursorignore  .gitignore  pyproject.toml
artifacts/words/: words.csv
runs/rvq/: summary_best.json  summary_last.json
src/config/: config.yaml
src/scripts/: create_embedding_dataset.py  extract_hierarchical_embeddings.py  extract_hierarchical_embeddings_bisecting_k_means.py  extract_indices.py  extract_top_words.py  train_word2vec_model.py
src/training/: train_autoencoder.py
src/utils/dataset/: torch_dataset.py  wiki_loader.py
src/utils/embeddings/: embedding_generator.py  word2vec_trainer.py
src/utils/model/: autoencoder.py
src/utils/tokenizer/: word_tokenizer.py
src/utils/trainer/: rq_vae_trainer.py
